--- a/content/0313修改圖檔.html
+++ b/content/0313修改圖檔.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li class='has-children'><a href='修改圖檔.html'>修改圖檔</a><ul class='dropdown'><li><a href='W3繪製零件圖.html'>W3繪製零件圖</a><li><a href='0312修改圖檔.html'>0312修改圖檔</a><li><a href='0313修改圖檔.html'>0313修改圖檔</a></li></ul><li><a href='模擬測試.html'>模擬測試</a><li class='has-children'><a href='分組報告.html'>分組報告</a><ul class='dropdown'><li><a href='stage1-bg5.html'>stage1-bg5</a></li></ul><li><a href='W5.html'>W5</a><li class='has-children'><a href='W7.html'>W7</a><ul class='dropdown'><li><a href='stage2發球機構圖.html'>stage2發球機構圖</a><li><a href='CoppeliaSim模擬.html'>CoppeliaSim模擬</a></li></ul><li class='has-children'><a href='W8.html'>W8</a><ul class='dropdown'><li><a href='0412模擬(無球).html'>0412模擬(無球)</a><li><a href='0413模擬(有球).html'>0413模擬(有球)</a><li><a href='0415模擬.html'>0415模擬</a><li><a href='0416模擬.html'>0416模擬</a></li></ul><li><a href='W9.html'>W9</a></li>
+                     <li><a href='About.html'>About</a><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li class='has-children'><a href='修改圖檔.html'>修改圖檔</a><ul class='dropdown'><li><a href='W3繪製零件圖.html'>W3繪製零件圖</a><li><a href='0312修改圖檔.html'>0312修改圖檔</a><li><a href='0313修改圖檔.html'>0313修改圖檔</a></li></ul><li><a href='模擬.html'>模擬</a><li class='has-children'><a href='分組報告.html'>分組報告</a><ul class='dropdown'><li><a href='stage1-bg5.html'>stage1-bg5</a></li></ul><li><a href='W5.html'>W5</a><li class='has-children'><a href='W7.html'>W7</a><ul class='dropdown'><li><a href='stage2發球機構圖.html'>stage2發球機構圖</a><li><a href='CoppeliaSim模擬.html'>CoppeliaSim模擬</a></li></ul><li class='has-children'><a href='W8.html'>W8</a><ul class='dropdown'><li><a href='0412模擬(無球).html'>0412模擬(無球)</a><li><a href='0413模擬(有球).html'>0413模擬(有球)</a><li><a href='0415模擬.html'>0415模擬</a><li><a href='0416模擬.html'>0416模擬</a></li></ul><li><a href='W9.html'>W9</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">0312修改圖檔 << <a href='0312修改圖檔.html'>Previous</a> <a href='模擬測試.html'>Next</a> >> 模擬測試<br /><h1>0313修改圖檔</h1>
+    <div id="tipue_search_content">0312修改圖檔 << <a href='0312修改圖檔.html'>Previous</a> <a href='模擬.html'>Next</a> >> 模擬<br /><h1>0313修改圖檔</h1>
 <p><span>一開始放入coppeliasim開啟動力學特性後，零件就會全部解體，因此在修改一次圖檔</span></p>
 <p>組合圖</p>
 <p><img alt="" height="281" src="./../images/159181414_463720324770126_3335785282015953195_n.png" width="500"/></p>
@@ -147,7 +147,7 @@ img.add_border {
 <p>將滑軌溝槽高度改為1.5mm，避免模擬時產生干涉</p>
 <p><img alt="" height="281" src="./../images/159484214_3824000144329345_6037612502523750647_n.png" width="500"/></p>
 <p>零件載點:<a href="https://40823218.github.io/stage1-bg5/content/0313.html">https://40823218.github.io/stage1-bg5/content/0313.html</a></p>
-<br />0312修改圖檔 << <a href='0312修改圖檔.html'>Previous</a> <a href='模擬測試.html'>Next</a> >> 模擬測試</div>
+<br />0312修改圖檔 << <a href='0312修改圖檔.html'>Previous</a> <a href='模擬.html'>Next</a> >> 模擬</div>
         
     <!-- footer -->
       <div class="container">
