--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -61,11 +61,10 @@
 <p>將滑軌溝槽高度改為1.5mm，避免模擬時產生干涉</p>
 <p><img alt="" height="281" src="/images/159484214_3824000144329345_6037612502523750647_n.png" width="500"/></p>
 <p>零件載點:<a href="https://40823218.github.io/stage1-bg5/content/0313.html">https://40823218.github.io/stage1-bg5/content/0313.html</a></p>
-<h1>模擬測試</h1>
+<h1>模擬</h1>
 <p><span>將零件檔放入coppeliasim進行模擬</span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/WL4Nl-Xjz58" width="560"></iframe></p>
-<p><a href="https://drive.google.com/file/d/1BTVrN3haCddp-4vQIFQlZlcX-xQ2j3lg/view?usp=sharing">coppeliasim模擬檔案</a></p>
-<h1>分組報告</h1>
+<p><a href="https://drive.google.com/file/d/1BTVrN3haCddp-4vQIFQlZlcX-xQ2j3lg/view?usp=sharing">coppeliasim模擬檔案</a></p><h1>分組報告</h1>
 <h2>stage1-bg5</h2>
 <p>分工部分:建立倉儲及架設網站，編輯網站，繪製SolidWorks零件圖，Coppeliasim模擬，Reveal製作。</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/WTlvZlrDNqY" width="560"></iframe></p>
@@ -92,7 +91,7 @@
 <h2>0413模擬(有球)</h2>
 <p><span>CoppelisaSim檔案下載:<a href="https://drive.google.com/file/d/15tYq9ufaD22cAnGwqmCR1SU-TwF0cQ6G/view?usp=sharing">https://drive.google.com/file/d/15tYq9ufaD22cAnGwqmCR1SU-TwF0cQ6G/view?usp=sharing</a></span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/7uN28_a-y3U" title="YouTube video player" width="560"></iframe></p>
-<h2><span> 0415模擬</span></h2>
+<h2>0415模擬</h2>
 <p><span>因上次模擬失敗，經過修改尺寸後重新進行模擬。</span></p>
 <p><span>CoppelisaSim檔案下載:<a href="https://drive.google.com/file/d/1YWdvvi25aMz-AP9vr7GxXkrPSO2RPFI0/view?usp=sharing">https://drive.google.com/file/d/1YWdvvi25aMz-AP9vr7GxXkrPSO2RPFI0/view?usp=sharing</a></span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/zSUcFKTthro" title="YouTube video player" width="560"></iframe></p>
