--- a/content/W9.html
+++ b/content/W9.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li class='has-children'><a href='修改圖檔.html'>修改圖檔</a><ul class='dropdown'><li><a href='W3繪製零件圖.html'>W3繪製零件圖</a><li><a href='0312修改圖檔.html'>0312修改圖檔</a><li><a href='0313修改圖檔.html'>0313修改圖檔</a></li></ul><li><a href='模擬測試.html'>模擬測試</a><li class='has-children'><a href='分組報告.html'>分組報告</a><ul class='dropdown'><li><a href='stage1-bg5.html'>stage1-bg5</a></li></ul><li><a href='W5.html'>W5</a><li class='has-children'><a href='W7.html'>W7</a><ul class='dropdown'><li><a href='stage2發球機構圖.html'>stage2發球機構圖</a><li><a href='CoppeliaSim模擬.html'>CoppeliaSim模擬</a></li></ul><li class='has-children'><a href='W8.html'>W8</a><ul class='dropdown'><li><a href='0412模擬(無球).html'>0412模擬(無球)</a><li><a href='0413模擬(有球).html'>0413模擬(有球)</a><li><a href='0415模擬.html'>0415模擬</a><li><a href='0416模擬.html'>0416模擬</a></li></ul><li><a href='W9.html'>W9</a></li>
+                     <li><a href='About.html'>About</a><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li class='has-children'><a href='修改圖檔.html'>修改圖檔</a><ul class='dropdown'><li><a href='W3繪製零件圖.html'>W3繪製零件圖</a><li><a href='0312修改圖檔.html'>0312修改圖檔</a><li><a href='0313修改圖檔.html'>0313修改圖檔</a></li></ul><li><a href='模擬.html'>模擬</a><li class='has-children'><a href='分組報告.html'>分組報告</a><ul class='dropdown'><li><a href='stage1-bg5.html'>stage1-bg5</a></li></ul><li><a href='W5.html'>W5</a><li class='has-children'><a href='W7.html'>W7</a><ul class='dropdown'><li><a href='stage2發球機構圖.html'>stage2發球機構圖</a><li><a href='CoppeliaSim模擬.html'>CoppeliaSim模擬</a></li></ul><li class='has-children'><a href='W8.html'>W8</a><ul class='dropdown'><li><a href='0412模擬(無球).html'>0412模擬(無球)</a><li><a href='0413模擬(有球).html'>0413模擬(有球)</a><li><a href='0415模擬.html'>0415模擬</a><li><a href='0416模擬.html'>0416模擬</a></li></ul><li><a href='W9.html'>W9</a></li>
                       </ul>
                 </nav>
               </div>
@@ -135,7 +135,8 @@ img.add_border {
         </header>
     <div id="tipue_search_content">0416模擬 << <a href='0416模擬.html'>Previous</a> <br /><h1>W9</h1>
 <p><span>CoppelisaSim檔案下載:<a href="https://drive.google.com/file/d/1zCZRo2_0T8kJSp4S2QMp4amKAJA1G6jz/view?usp=sharing">https://drive.google.com/file/d/1zCZRo2_0T8kJSp4S2QMp4amKAJA1G6jz/view?usp=sharing</a></span></p>
-<p>將籃子改為管子，解決了卡球的問題。<iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/AhwFZV0kfcc" title="YouTube video player" width="560"></iframe></p><br />0416模擬 << <a href='0416模擬.html'>Previous</a> </div>
+<p>將籃子改為管子，解決了卡球的問題。</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/AhwFZV0kfcc" title="YouTube video player" width="560"></iframe></p><br />0416模擬 << <a href='0416模擬.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
