--- a/content/stage2-bg7.html
+++ b/content/stage2-bg7.html
@@ -133,20 +133,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='W1.html'>Next</a> >> W1<br /><h1>About</h1>
-<p><span>個人倉儲:</span><a href="https://github.com/40823218/cd2021">https://github.com/40823218/cd2021</a></p>
-<p><strong>stage1-bg5:製作曲柄滑塊壓罐機</strong></p>
-<p><span>使用軟體:solidworks2017 coppeliasim</span></p>
-<p>分組倉儲:<a href="https://github.com/40823218/stage1-bg5">https://github.com/40823218/stage1-bg5</a></p>
-<p>分組網站:<a href="https://40823218.github.io/stage1-bg5/content/About.html">https://40823218.github.io/stage1-bg5/content/About.html</a></p>
-<p>gitter:<a href="https://gitter.im/cd2021-bg5/community">https://gitter.im/cd2021-bg5/community</a></p>
-<p><strong>stage2-bg7:乒乓球發球機</strong></p>
-<p>使用軟體:solidworks2017 coppeliasim</p>
-<p>分組倉儲:<a href="https://github.com/40823218/stage2-bg7">https://github.com/40823218/stage2-bg7</a></p>
-<p>分組網站:<a href="https://40823238.github.io/stage2-bg7/content/index.html">https://40823238.github.io/stage2-bg7/content/index.html</a></p>
-<p>gitter:<a href="https://gitter.im/stage2-bg7/community">https://gitter.im/stage2-bg7/community</a></p>
-<p>discord:<a href="https://discord.com/invite/xkhgSc9aWb">https://discord.com/invite/xkhgSc9aWb</a></p>
-<br /> <a href='W1.html'>Next</a> >> W1</div>
+    <div id="tipue_search_content">stage1-bg5 << <a href='stage1-bg5.html'>Previous</a> <a href='W5.html'>Next</a> >> W5<br /><h1>stage2-bg7</h1>
+<p><span>分工部分:編輯網站，繪製SolidWorks零件圖，Coppeliasim模擬。</span></p>
+<p><span></span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/HjaVar6d3Jk" title="YouTube video player" width="560"></iframe></p>
+<p></p>
+<br />stage1-bg5 << <a href='stage1-bg5.html'>Previous</a> <a href='W5.html'>Next</a> >> W5</div>
         
     <!-- footer -->
       <div class="container">
