--- a/config/content.htm
+++ b/config/content.htm
@@ -79,6 +79,7 @@
 <p><iframe height="500" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQMzTUFlLLSl_l5gtY4Aw7mNaJaEYZEOxclURC7DIjN5JmkV8FYvwnOF3uMD0oK-MzwzWWuboreM6xm/pubhtml?widget=true&amp;headers=false" width="1000"></iframe></p>
 <h1>W7</h1>
 <h2>stage2發球機構圖</h2>
+<p>因不知CoppeliaSim能否模擬發球機發球，先簡單構圖模擬。</p>
 <p><a href="https://drive.google.com/file/d/1Q6hQEx5lVr0ax_K7Psk0xeU6zcTqvowX/view?usp=sharing">組合圖</a> 連結可下載檔案</p>
 <p><img alt="" height="279" src="/images/SLDWORKS_bBDwRsu1AB.png" width="500"/></p>
 <p><span>為了要將球發射出去，將兩圓筒最近距離設為和乒乓球相同的40mm</span></p>
