--- a/config/content.htm
+++ b/config/content.htm
@@ -67,9 +67,8 @@
 <p><a href="https://drive.google.com/file/d/1BTVrN3haCddp-4vQIFQlZlcX-xQ2j3lg/view?usp=sharing">coppeliasim模擬檔案</a></p>
 <h1>分組報告</h1>
 <h2>stage1-bg5</h2>
-<p>分工部分:建立倉儲及架設網站，編輯網站，繪製SolidWorks零件圖，Coppeliasim模擬，Reveal製作。</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/WTlvZlrDNqY" width="560"></iframe></p>
-<h2>stage2-bg7</h2>
+<p>分工部分:建立倉儲及架設網站，編輯網站，找尋參考資料，繪製SolidWorks零件圖，Coppeliasim模擬，Reveal製作。</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/WTlvZlrDNqY" width="560"></iframe></p><h2>stage2-bg7</h2>
 <p><span>分工部分:編輯網站，繪製SolidWorks零件圖，Coppeliasim模擬。</span></p>
 <p><span></span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/HjaVar6d3Jk" title="YouTube video player" width="560"></iframe></p>
