--- a/content/stage1-bg5-1.html
+++ b/content/stage1-bg5-1.html
@@ -133,8 +133,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W2 << <a href='W2.html'>Previous</a> <a href='W3繪製零件圖.html'>Next</a> >> W3繪製零件圖<br /><h1>修改圖檔</h1>
-<br />W2 << <a href='W2.html'>Previous</a> <a href='W3繪製零件圖.html'>Next</a> >> W3繪製零件圖</div>
+    <div id="tipue_search_content">模擬 << <a href='模擬.html'>Previous</a> <a href='stage2-bg7-1.html'>Next</a> >> stage2-bg7-1<br /><h1>stage1-bg5-1</h1>
+<p><span>將零件檔放入coppeliasim進行模擬</span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/WL4Nl-Xjz58" width="560"></iframe></p>
+<p><a href="https://drive.google.com/file/d/1BTVrN3haCddp-4vQIFQlZlcX-xQ2j3lg/view?usp=sharing">coppeliasim模擬檔案</a></p>
+<br />模擬 << <a href='模擬.html'>Previous</a> <a href='stage2-bg7-1.html'>Next</a> >> stage2-bg7-1</div>
         
     <!-- footer -->
       <div class="container">
