--- a/content/stage2-bg7-1.html
+++ b/content/stage2-bg7-1.html
@@ -133,8 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W2 << <a href='W2.html'>Previous</a> <a href='W3繪製零件圖.html'>Next</a> >> W3繪製零件圖<br /><h1>修改圖檔</h1>
-<br />W2 << <a href='W2.html'>Previous</a> <a href='W3繪製零件圖.html'>Next</a> >> W3繪製零件圖</div>
+    <div id="tipue_search_content">stage1-bg5-1 << <a href='stage1-bg5-1.html'>Previous</a> <a href='0412模擬(無球).html'>Next</a> >> 0412模擬(無球)<br /><h1>stage2-bg7-1</h1>
+<br />stage1-bg5-1 << <a href='stage1-bg5-1.html'>Previous</a> <a href='0412模擬(無球).html'>Next</a> >> 0412模擬(無球)</div>
         
     <!-- footer -->
       <div class="container">
