--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -62,12 +62,36 @@
 <p><img alt="" height="281" src="/images/159484214_3824000144329345_6037612502523750647_n.png" width="500"/></p>
 <p>零件載點:<a href="https://40823218.github.io/stage1-bg5/content/0313.html">https://40823218.github.io/stage1-bg5/content/0313.html</a></p>
 <h1>模擬</h1>
+<h2>stage1-bg5</h2>
 <p><span>將零件檔放入coppeliasim進行模擬</span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/WL4Nl-Xjz58" width="560"></iframe></p>
 <p><a href="https://drive.google.com/file/d/1BTVrN3haCddp-4vQIFQlZlcX-xQ2j3lg/view?usp=sharing">coppeliasim模擬檔案</a></p>
+<h2>stage2-bg7</h2>
+<h3>0412模擬(無球)</h3>
+<p>CoppelisaSim檔案下載:<a href="https://drive.google.com/file/d/1py0BHoKMlVCEvJfn7cyLHaJK2n14c_m1/view?usp=sharing">https://drive.google.com/file/d/1py0BHoKMlVCEvJfn7cyLHaJK2n14c_m1/view?usp=sharing</a></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/BLFhSflxA-4" title="YouTube video player" width="560"></iframe></p>
+<h3>0413模擬(有球)</h3>
+<p><span>CoppelisaSim檔案下載:<a href="https://drive.google.com/file/d/15tYq9ufaD22cAnGwqmCR1SU-TwF0cQ6G/view?usp=sharing">https://drive.google.com/file/d/15tYq9ufaD22cAnGwqmCR1SU-TwF0cQ6G/view?usp=sharing</a></span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/7uN28_a-y3U" title="YouTube video player" width="560"></iframe></p>
+<h3>0415模擬</h3>
+<p><span>因上次模擬失敗，經過修改尺寸後重新進行模擬。</span></p>
+<p><span>CoppelisaSim檔案下載:<a href="https://drive.google.com/file/d/1YWdvvi25aMz-AP9vr7GxXkrPSO2RPFI0/view?usp=sharing">https://drive.google.com/file/d/1YWdvvi25aMz-AP9vr7GxXkrPSO2RPFI0/view?usp=sharing</a></span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/zSUcFKTthro" title="YouTube video player" width="560"></iframe></p>
+<h3>0416模擬</h3>
+<p><span>CoppelisaSim檔案下載:<a href="https://drive.google.com/file/d/1g_bpdxLU1_pywdjowKo6yeOXV9ubbE1K/view?usp=sharing">https://drive.google.com/file/d/1g_bpdxLU1_pywdjowKo6yeOXV9ubbE1K/view?usp=sharing</a></span></p>
+<p>因前幾次模擬球都會亂飛，這次加上噴嘴。</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/0BKrbzrEB_Y" title="YouTube video player" width="560"></iframe></p>
+<p>雖然修改了籃子，不過卡球問題還是沒解決。</p>
+<p><img alt="" height="281" src="/images/unknown.png" width="500"/></p>
+<h3>0422模擬</h3>
+<p><span>CoppelisaSim檔案下載:<a href="https://drive.google.com/file/d/1zCZRo2_0T8kJSp4S2QMp4amKAJA1G6jz/view?usp=sharing">https://drive.google.com/file/d/1zCZRo2_0T8kJSp4S2QMp4amKAJA1G6jz/view?usp=sharing</a></span></p>
+<p>將籃子改為管子，解決了卡球的問題。</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/AhwFZV0kfcc" title="YouTube video player" width="560"></iframe></p>
+<p>所有模擬檔+STL下載:<a href="https://drive.google.com/file/d/1t_C7udINVkFZDzwG3aTY2GM2_Zf70nkG/view?usp=sharing">https://drive.google.com/file/d/1t_C7udINVkFZDzwG3aTY2GM2_Zf70nkG/view?usp=sharing</a></p>
+<p></p>
 <h1>分組報告</h1>
 <h2>stage1-bg5</h2>
-<p>分工部分:建立倉儲及架設網站，編輯網站，繪製SolidWorks零件圖，Coppeliasim模擬，Reveal製作。</p>
+<p>分工部分:建立倉儲及架設網站，編輯網站，找尋參考資料，繪製SolidWorks零件圖，Coppeliasim模擬，Reveal製作。</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/WTlvZlrDNqY" width="560"></iframe></p>
 <h2>stage2-bg7</h2>
 <p><span>分工部分:編輯網站，繪製SolidWorks零件圖，Coppeliasim模擬。</span></p>
@@ -91,27 +115,65 @@
 <p>模擬檔案下載:<a href="https://drive.google.com/file/d/12AT3t7wfKkKWZwZ15KEAG74njWn7D8ro/view?usp=sharing">https://drive.google.com/file/d/12AT3t7wfKkKWZwZ15KEAG74njWn7D8ro/view?usp=sharing</a></p>
 <p>因要將球射出，加大馬達扭力後，造成圓筒晃動。</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/sCrbots4E8Y" title="YouTube video player" width="560"></iframe></p>
-<h1>W8</h1>
-<h2>0412模擬(無球)</h2>
-<p>CoppelisaSim檔案下載:<a href="https://drive.google.com/file/d/1py0BHoKMlVCEvJfn7cyLHaJK2n14c_m1/view?usp=sharing">https://drive.google.com/file/d/1py0BHoKMlVCEvJfn7cyLHaJK2n14c_m1/view?usp=sharing</a></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/BLFhSflxA-4" title="YouTube video player" width="560"></iframe></p>
-<h2>0413模擬(有球)</h2>
-<p><span>CoppelisaSim檔案下載:<a href="https://drive.google.com/file/d/15tYq9ufaD22cAnGwqmCR1SU-TwF0cQ6G/view?usp=sharing">https://drive.google.com/file/d/15tYq9ufaD22cAnGwqmCR1SU-TwF0cQ6G/view?usp=sharing</a></span></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/7uN28_a-y3U" title="YouTube video player" width="560"></iframe></p>
-<h2>0415模擬</h2>
-<p><span>因上次模擬失敗，經過修改尺寸後重新進行模擬。</span></p>
-<p><span>CoppelisaSim檔案下載:<a href="https://drive.google.com/file/d/1YWdvvi25aMz-AP9vr7GxXkrPSO2RPFI0/view?usp=sharing">https://drive.google.com/file/d/1YWdvvi25aMz-AP9vr7GxXkrPSO2RPFI0/view?usp=sharing</a></span></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/zSUcFKTthro" title="YouTube video player" width="560"></iframe></p>
-<h2>0416模擬</h2>
-<p><span>CoppelisaSim檔案下載:<a href="https://drive.google.com/file/d/1g_bpdxLU1_pywdjowKo6yeOXV9ubbE1K/view?usp=sharing">https://drive.google.com/file/d/1g_bpdxLU1_pywdjowKo6yeOXV9ubbE1K/view?usp=sharing</a></span></p>
-<p>因前幾次模擬球都會亂飛，這次加上噴嘴。</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/0BKrbzrEB_Y" title="YouTube video player" width="560"></iframe></p>
-<p>雖然修改了籃子，不過卡球問題還是沒解決。</p>
-<p><img alt="" height="281" src="/images/unknown.png" width="500"/></p>
-<h1>W9</h1>
-<h2>0422模擬</h2>
-<p><span>CoppelisaSim檔案下載:<a href="https://drive.google.com/file/d/1zCZRo2_0T8kJSp4S2QMp4amKAJA1G6jz/view?usp=sharing">https://drive.google.com/file/d/1zCZRo2_0T8kJSp4S2QMp4amKAJA1G6jz/view?usp=sharing</a></span></p>
-<p>將籃子改為管子，解決了卡球的問題。</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/AhwFZV0kfcc" title="YouTube video player" width="560"></iframe></p>
-<p>所有模擬檔+STL下載:<a href="https://drive.google.com/file/d/1t_C7udINVkFZDzwG3aTY2GM2_Zf70nkG/view?usp=sharing">https://drive.google.com/file/d/1t_C7udINVkFZDzwG3aTY2GM2_Zf70nkG/view?usp=sharing</a></p>
-<p></p>
+<h1>task</h1>
+<h2>task2</h2>
+<p>參考資料:</p>
+<p>40823246 Task2:<a href="https://40823246.github.io/cd2021/content/task2.html">https://40823246.github.io/cd2021/content/task2.html</a></p>
+<p>MDE Task2:<a href="http://mde.tw/cd2021/content/task2.html">http://mde.tw/cd2021/content/task2.html</a></p>
+<p>while loop說明:<a href="https://blog.csdn.net/geerniya/article/details/77524173">https://blog.csdn.net/geerniya/article/details/77524173</a></p>
+<p>python keyboard:<a href="https://pypi.org/project/keyboard/">https://pypi.org/project/keyboard/</a></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/61PJiuaRjeY" title="YouTube video player" width="560"></iframe></p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false"># File created by Thibaut Royer, Epitech school
+# thibaut1.royer@epitech.eu
+# It intends to be an example program for the "Two wheels, one arm" educative project.
+
+import sim as vrep
+import math
+import random
+import time
+import keyboard
+
+print ('Start')
+
+# Close eventual old connections
+vrep.simxFinish(-1)
+# Connect to V-REP remote server
+clientID = vrep.simxStart('192.168.0.4', 19997, True, True, 5000, 5)
+
+if clientID != -1:
+    print ('Connected to remote API server')
+    
+    res = vrep.simxAddStatusbarMessage(
+        clientID, "40823218",
+        vrep.simx_opmode_oneshot)
+    if res not in (vrep.simx_return_ok, vrep.simx_return_novalue_flag):
+        print("Could not add a message to the status bar.")
+
+    # Communication operating mode with the remote API : wait for its answer before continuing (blocking mode)
+    # http://www.coppeliarobotics.com/helpFiles/en/remoteApiConstants.htm
+    opmode = vrep.simx_opmode_oneshot_wait
+    STREAMING = vrep.simx_opmode_streaming
+
+    # Try to retrieve motors and robot handlers
+    # http://www.coppeliarobotics.com/helpFiles/en/remoteApiFunctionsPython.htm#simxGetObjectHandle
+    vrep.simxStartSimulation(clientID, opmode)
+    ret,major_handle=vrep.simxGetObjectHandle(clientID,"main_joint",opmode)
+    ret,minor_handle=vrep.simxGetObjectHandle(clientID,"Revolute_joint",opmode)
+    ret,minor2_handle=vrep.simxGetObjectHandle(clientID,"Revolute_joint1",opmode)
+    while True:
+        #Clockwise
+        if keyboard.is_pressed("w"):
+         vrep.simxSetJointTargetVelocity(clientID,major_handle,2,opmode)
+        #anti-Clockwise 
+        if keyboard.is_pressed("s"):
+         vrep.simxSetJointTargetVelocity(clientID,major_handle,-2,opmode)
+        #stop
+        if keyboard.is_pressed ("space"):
+         vrep.simxSetJointTargetVelocity(clientID,major_handle,0,opmode)
+
+
+else:
+    print ('Failed connecting to remote API server')
+    print ('End')
+</pre>
+<p><br/><br/></p>
