--- a/content/CoppeliaSim模擬.html
+++ b/content/CoppeliaSim模擬.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li class='has-children'><a href='修改圖檔.html'>修改圖檔</a><ul class='dropdown'><li><a href='W3繪製零件圖.html'>W3繪製零件圖</a><li><a href='0312修改圖檔.html'>0312修改圖檔</a><li><a href='0313修改圖檔.html'>0313修改圖檔</a></li></ul><li><a href='模擬.html'>模擬</a><li class='has-children'><a href='分組報告.html'>分組報告</a><ul class='dropdown'><li><a href='stage1-bg5.html'>stage1-bg5</a><li><a href='stage2-bg7.html'>stage2-bg7</a></li></ul><li><a href='W5.html'>W5</a><li class='has-children'><a href='W7.html'>W7</a><ul class='dropdown'><li><a href='stage2發球機構圖.html'>stage2發球機構圖</a><li><a href='CoppeliaSim模擬.html'>CoppeliaSim模擬</a></li></ul><li class='has-children'><a href='W8.html'>W8</a><ul class='dropdown'><li><a href='0412模擬(無球).html'>0412模擬(無球)</a><li><a href='0413模擬(有球).html'>0413模擬(有球)</a><li><a href='0415模擬.html'>0415模擬</a><li><a href='0416模擬.html'>0416模擬</a></li></ul><li class='has-children'><a href='W9.html'>W9</a><ul class='dropdown'><li><a href='0422模擬.html'>0422模擬</a></li>
+                     <li><a href='About.html'>About</a><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li class='has-children'><a href='修改圖檔.html'>修改圖檔</a><ul class='dropdown'><li><a href='W3繪製零件圖.html'>W3繪製零件圖</a><li><a href='0312修改圖檔.html'>0312修改圖檔</a><li><a href='0313修改圖檔.html'>0313修改圖檔</a></li></ul><li class='has-children'><a href='模擬.html'>模擬</a><ul class='dropdown'><li><a href='stage1-bg5-1.html'>stage1-bg5-1</a><li class='has-children'><a href='stage2-bg7-1.html'>stage2-bg7-1</a><ul class='dropdown'><li><a href='0412模擬(無球).html'>0412模擬(無球)</a><li><a href='0413模擬(有球).html'>0413模擬(有球)</a><li><a href='0415模擬.html'>0415模擬</a><li><a href='0416模擬.html'>0416模擬</a><li><a href='0422模擬.html'>0422模擬</a></li></li></ul></ul><li class='has-children'><a href='分組報告.html'>分組報告</a><ul class='dropdown'><li><a href='stage1-bg5-2.html'>stage1-bg5-2</a><li><a href='stage2-bg7-2.html'>stage2-bg7-2</a></li></ul><li><a href='W5.html'>W5</a><li class='has-children'><a href='W7.html'>W7</a><ul class='dropdown'><li><a href='stage2發球機構圖.html'>stage2發球機構圖</a><li><a href='CoppeliaSim模擬.html'>CoppeliaSim模擬</a></li></ul><li class='has-children'><a href='task.html'>task</a><ul class='dropdown'><li><a href='task2.html'>task2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,11 +133,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">stage2發球機構圖 << <a href='stage2發球機構圖.html'>Previous</a> <a href='W8.html'>Next</a> >> W8<br /><h1>CoppeliaSim模擬</h1>
+    <div id="tipue_search_content">stage2發球機構圖 << <a href='stage2發球機構圖.html'>Previous</a> <a href='task.html'>Next</a> >> task<br /><h1>CoppeliaSim模擬</h1>
 <p>模擬檔案下載:<a href="https://drive.google.com/file/d/12AT3t7wfKkKWZwZ15KEAG74njWn7D8ro/view?usp=sharing">https://drive.google.com/file/d/12AT3t7wfKkKWZwZ15KEAG74njWn7D8ro/view?usp=sharing</a></p>
 <p>因要將球射出，加大馬達扭力後，造成圓筒晃動。</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/sCrbots4E8Y" title="YouTube video player" width="560"></iframe></p>
-<br />stage2發球機構圖 << <a href='stage2發球機構圖.html'>Previous</a> <a href='W8.html'>Next</a> >> W8</div>
+<br />stage2發球機構圖 << <a href='stage2發球機構圖.html'>Previous</a> <a href='task.html'>Next</a> >> task</div>
         
     <!-- footer -->
       <div class="container">
