--- a/content/stage3-bg6.html
+++ b/content/stage3-bg6.html
@@ -133,8 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W2 << <a href='W2.html'>Previous</a> <a href='W3繪製零件圖.html'>Next</a> >> W3繪製零件圖<br /><h1>修改圖檔</h1>
-<br />W2 << <a href='W2.html'>Previous</a> <a href='W3繪製零件圖.html'>Next</a> >> W3繪製零件圖</div>
+    <div id="tipue_search_content">0422模擬 << <a href='0422模擬.html'>Previous</a> <a href='0513.html'>Next</a> >> 0513<br /><h1>stage3-bg6</h1>
+<br />0422模擬 << <a href='0422模擬.html'>Previous</a> <a href='0513.html'>Next</a> >> 0513</div>
         
     <!-- footer -->
       <div class="container">
