--- a/content/About.html
+++ b/content/About.html
@@ -150,7 +150,7 @@ img.add_border {
 <p>使用軟體:solidworks2017 coppeliasim OBS</p>
 <p>分組倉儲:<a href="https://github.com/40823225/stage3-bg6">https://github.com/40823225/stage3-bg6</a></p>
 <p>分組網站:<a href="https://40823225.github.io/stage3-bg6/content/About.html">https://40823225.github.io/stage3-bg6/content/About.html</a></p>
-<p>gitter:</p>
+<p>gitter:<a href="https://gitter.im/%E5%AE%B6%E9%8A%98%E7%9A%84/eightpeople">https://gitter.im/%E5%AE%B6%E9%8A%98%E7%9A%84/eightpeople</a></p>
 <p>discord:<a href="https://discord.com/invite/xkhgSc9aWb">https://discord.com/invite/xkhgSc9aWb</a></p>
 <p></p>
 <p></p>
