--- a/content/影片字幕整理.html
+++ b/content/影片字幕整理.html
@@ -137,7 +137,9 @@ img.add_border {
 <p></p>
 <p>右下角可開啟字幕</p>
 <p></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Kzo_jGEVZ1E" title="YouTube video player" width="560"></iframe></p><br />W15 << <a href='W15.html'>Previous</a> </div>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Kzo_jGEVZ1E" title="YouTube video player" width="560"></iframe></p>
+<p>第二部由40823248製作</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/YLynnv0fGlE" title="YouTube video player" width="560"></iframe></p><br />W15 << <a href='W15.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
