--- a/config/content.htm
+++ b/config/content.htm
@@ -15,7 +15,7 @@
 <p>使用軟體:solidworks2017 coppeliasim OBS</p>
 <p>分組倉儲:<a href="https://github.com/40823225/stage3-bg6">https://github.com/40823225/stage3-bg6</a></p>
 <p>分組網站:<a href="https://40823225.github.io/stage3-bg6/content/About.html">https://40823225.github.io/stage3-bg6/content/About.html</a></p>
-<p>gitter:</p>
+<p>gitter:<a href="https://gitter.im/%E5%AE%B6%E9%8A%98%E7%9A%84/eightpeople">https://gitter.im/%E5%AE%B6%E9%8A%98%E7%9A%84/eightpeople</a></p>
 <p>discord:<a href="https://discord.com/invite/xkhgSc9aWb">https://discord.com/invite/xkhgSc9aWb</a></p>
 <p></p>
 <p></p>
@@ -403,3 +403,5 @@ print(output)
 <p>右下角可開啟字幕</p>
 <p></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Kzo_jGEVZ1E" title="YouTube video player" width="560"></iframe></p>
+<p>第二部由40823248製作</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/YLynnv0fGlE" title="YouTube video player" width="560"></iframe></p>
