--- a/content/W16.html
+++ b/content/W16.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li class='has-children'><a href='修改圖檔.html'>修改圖檔</a><ul class='dropdown'><li><a href='W3繪製零件圖.html'>W3繪製零件圖</a><li><a href='0312修改圖檔.html'>0312修改圖檔</a><li><a href='0313修改圖檔.html'>0313修改圖檔</a></li></ul><li class='has-children'><a href='模擬.html'>模擬</a><ul class='dropdown'><li><a href='stage1-bg5-1.html'>stage1-bg5-1</a><li class='has-children'><a href='stage2-bg7-1.html'>stage2-bg7-1</a><ul class='dropdown'><li><a href='0412模擬(無球).html'>0412模擬(無球)</a><li><a href='0413模擬(有球).html'>0413模擬(有球)</a><li><a href='0415模擬.html'>0415模擬</a><li><a href='0416模擬.html'>0416模擬</a><li><a href='0422模擬.html'>0422模擬</a></li></ul><li class='has-children'><a href='stage3-bg6.html'>stage3-bg6</a><ul class='dropdown'><li><a href='0513.html'>0513</a><li><a href='0517.html'>0517</a></li></li></ul></ul><li class='has-children'><a href='分組報告.html'>分組報告</a><ul class='dropdown'><li><a href='stage1-bg5-2.html'>stage1-bg5-2</a><li><a href='stage2-bg7-2.html'>stage2-bg7-2</a></li></ul><li><a href='W5.html'>W5</a><li class='has-children'><a href='W7.html'>W7</a><ul class='dropdown'><li><a href='stage2發球機構圖.html'>stage2發球機構圖</a><li><a href='CoppeliaSim模擬.html'>CoppeliaSim模擬</a></li></ul><li class='has-children'><a href='task.html'>task</a><ul class='dropdown'><li><a href='task1.html'>task1</a><li><a href='task2.html'>task2</a></li></ul><li class='has-children'><a href='W15.html'>W15</a><ul class='dropdown'><li><a href='影片字幕整理.html'>影片字幕整理</a></li>
+                     <li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li class='has-children'><a href='修改圖檔.html'>修改圖檔</a><ul class='dropdown'><li><a href='W3繪製零件圖.html'>W3繪製零件圖</a><li><a href='0312修改圖檔.html'>0312修改圖檔</a><li><a href='0313修改圖檔.html'>0313修改圖檔</a></li></ul><li class='has-children'><a href='模擬.html'>模擬</a><ul class='dropdown'><li><a href='stage1-bg5-1.html'>stage1-bg5-1</a><li class='has-children'><a href='stage2-bg7-1.html'>stage2-bg7-1</a><ul class='dropdown'><li><a href='0412模擬(無球).html'>0412模擬(無球)</a><li><a href='0413模擬(有球).html'>0413模擬(有球)</a><li><a href='0415模擬.html'>0415模擬</a><li><a href='0416模擬.html'>0416模擬</a><li><a href='0422模擬.html'>0422模擬</a></li></ul><li class='has-children'><a href='stage3-bg6.html'>stage3-bg6</a><ul class='dropdown'><li><a href='0513.html'>0513</a><li><a href='0517.html'>0517</a></li></li></ul></ul><li class='has-children'><a href='分組報告.html'>分組報告</a><ul class='dropdown'><li><a href='stage1-bg5-2.html'>stage1-bg5-2</a><li><a href='stage2-bg7-2.html'>stage2-bg7-2</a></li></ul><li><a href='W5.html'>W5</a><li class='has-children'><a href='W7.html'>W7</a><ul class='dropdown'><li><a href='stage2發球機構圖.html'>stage2發球機構圖</a><li><a href='CoppeliaSim模擬.html'>CoppeliaSim模擬</a></li></ul><li class='has-children'><a href='task.html'>task</a><ul class='dropdown'><li><a href='task1.html'>task1</a><li><a href='task2.html'>task2</a></li></ul><li class='has-children'><a href='W15.html'>W15</a><ul class='dropdown'><li><a href='影片字幕整理.html'>影片字幕整理</a></li></ul><li><a href='W16.html'>W16</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,28 +133,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='W1.html'>Next</a> >> W1<br /><h1>About</h1>
-<p><span>個人倉儲:</span><a href="https://github.com/40823218/cd2021">https://github.com/40823218/cd2021</a></p>
-<p><strong>stage1-bg5:製作曲柄滑塊壓罐機</strong></p>
-<p><span>使用軟體:solidworks2017 coppeliasim</span></p>
-<p>分組倉儲:<a href="https://github.com/40823218/stage1-bg5">https://github.com/40823218/stage1-bg5</a></p>
-<p>分組網站:<a href="https://40823218.github.io/stage1-bg5/content/About.html">https://40823218.github.io/stage1-bg5/content/About.html</a></p>
-<p>gitter:<a href="https://gitter.im/cd2021-bg5/community">https://gitter.im/cd2021-bg5/community</a></p>
-<p><strong>stage2-bg7:乒乓球發球機</strong></p>
-<p>使用軟體:solidworks2017 coppeliasim</p>
-<p>分組倉儲:<a href="https://github.com/40823218/stage2-bg7">https://github.com/40823218/stage2-bg7</a></p>
-<p>分組網站:<a href="https://40823238.github.io/stage2-bg7/content/index.html">https://40823238.github.io/stage2-bg7/content/index.html</a></p>
-<p>gitter:<a href="https://gitter.im/stage2-bg7/community">https://gitter.im/stage2-bg7/community</a></p>
-<p>discord:<a href="https://discord.com/invite/xkhgSc9aWb">https://discord.com/invite/xkhgSc9aWb</a></p>
-<p><strong>stage3-bg6:鍵盤控制機械手臂</strong></p>
-<p>使用軟體:solidworks2017 coppeliasim OBS</p>
-<p>分組倉儲:<a href="https://github.com/40823225/stage3-bg6">https://github.com/40823225/stage3-bg6</a></p>
-<p>分組網站:<a href="https://40823225.github.io/stage3-bg6/content/About.html">https://40823225.github.io/stage3-bg6/content/About.html</a></p>
-<p>gitter:<a href="https://gitter.im/%E5%AE%B6%E9%8A%98%E7%9A%84/eightpeople">https://gitter.im/%E5%AE%B6%E9%8A%98%E7%9A%84/eightpeople</a></p>
-<p>discord:<a href="https://discord.com/invite/xkhgSc9aWb">https://discord.com/invite/xkhgSc9aWb</a></p>
+    <div id="tipue_search_content">影片字幕整理 << <a href='影片字幕整理.html'>Previous</a> <br /><h1>W16</h1>
+<p>W16_exam.7z:<a href="https://drive.google.com/file/d/1J6-V4aEV9wcSw2fcPES_XP3-EGOSKYOD/view?usp=sharing">https://drive.google.com/file/d/1J6-V4aEV9wcSw2fcPES_XP3-EGOSKYOD/view?usp=sharing</a></p>
+<p>組合圖共享:<a href="https://cad.onshape.com/documents/2ecc470bc373c9342368bed2/w/6bdf8005b9ef1065a7abdc8b/e/acaa0fb4e7125ba22bf48671">https://cad.onshape.com/documents/2ecc470bc373c9342368bed2/w/6bdf8005b9ef1065a7abdc8b/e/acaa0fb4e7125ba22bf48671</a></p>
 <p></p>
-<p></p>
-<br /> <a href='W1.html'>Next</a> >> W1</div>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/0FKfaqgdqKM" title="YouTube video player" width="560"></iframe></p><br />影片字幕整理 << <a href='影片字幕整理.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
