--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -270,8 +270,7 @@ else:
     print ('Failed connecting to remote API server')
     print ('End')
 </pre>
-<h1>分組報告</h1>
-<h2>stage1-bg5</h2>
+<h1>報告</h1><h2>stage1-bg5</h2>
 <p>分工部分:建立倉儲及架設網站，編輯網站，找尋參考資料，繪製SolidWorks零件圖，Coppeliasim模擬，Reveal製作。</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/WTlvZlrDNqY" width="560"></iframe></p>
 <h2>stage2-bg7</h2>
