--- a/content/W16.html
+++ b/content/W16.html
@@ -137,7 +137,7 @@ img.add_border {
 <p>W16_exam.7z:<a href="https://drive.google.com/file/d/1J6-V4aEV9wcSw2fcPES_XP3-EGOSKYOD/view?usp=sharing">https://drive.google.com/file/d/1J6-V4aEV9wcSw2fcPES_XP3-EGOSKYOD/view?usp=sharing</a></p>
 <p>組合圖共享:<a href="https://cad.onshape.com/documents/2ecc470bc373c9342368bed2/w/6bdf8005b9ef1065a7abdc8b/e/acaa0fb4e7125ba22bf48671">https://cad.onshape.com/documents/2ecc470bc373c9342368bed2/w/6bdf8005b9ef1065a7abdc8b/e/acaa0fb4e7125ba22bf48671</a></p>
 <p></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/0FKfaqgdqKM" title="YouTube video player" width="560"></iframe></p><br />影片字幕整理 << <a href='影片字幕整理.html'>Previous</a> </div>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/krKBiZaG674" title="YouTube video player" width="560"></iframe></p><br />影片字幕整理 << <a href='影片字幕整理.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
