--- a/content/報告.html
+++ b/content/報告.html
@@ -133,7 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">0517 << <a href='0517.html'>Previous</a> <a href='stage1-bg5-2.html'>Next</a> >> stage1-bg5-2<br /><h1>報告</h1><br />0517 << <a href='0517.html'>Previous</a> <a href='stage1-bg5-2.html'>Next</a> >> stage1-bg5-2</div>
+    <div id="tipue_search_content">0517 << <a href='0517.html'>Previous</a> <a href='stage1-bg5-2.html'>Next</a> >> stage1-bg5-2<br /><h1>報告</h1>
+<br />0517 << <a href='0517.html'>Previous</a> <a href='stage1-bg5-2.html'>Next</a> >> stage1-bg5-2</div>
         
     <!-- footer -->
       <div class="container">
