--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -406,12 +406,14 @@ print(output)
 <p>第二部由40823248製作</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/YLynnv0fGlE" title="YouTube video player" width="560"></iframe></p>
 <h1>W16</h1>
-<p>W16_exam.7z:<a href="https://drive.google.com/file/d/1J6-V4aEV9wcSw2fcPES_XP3-EGOSKYOD/view?usp=sharing">https://drive.google.com/file/d/1J6-V4aEV9wcSw2fcPES_XP3-EGOSKYOD/view?usp=sharing</a></p>
+<p>W16_exam_keyboard.7z:<a href="https://drive.google.com/file/d/1J6-V4aEV9wcSw2fcPES_XP3-EGOSKYOD/view?usp=sharing">https://drive.google.com/file/d/1J6-V4aEV9wcSw2fcPES_XP3-EGOSKYOD/view?usp=sharing</a></p>
+<p>W16_exam.7z(Lua逆向運動學):<a href="https://drive.google.com/file/d/1iCFnTyEoXctNd_d9t4YPJWqdarLVf4QA/view?usp=sharing">https://drive.google.com/file/d/1iCFnTyEoXctNd_d9t4YPJWqdarLVf4QA/view?usp=sharing</a></p>
 <p>組合圖共享:<a href="https://cad.onshape.com/documents/2ecc470bc373c9342368bed2/w/6bdf8005b9ef1065a7abdc8b/e/acaa0fb4e7125ba22bf48671">https://cad.onshape.com/documents/2ecc470bc373c9342368bed2/w/6bdf8005b9ef1065a7abdc8b/e/acaa0fb4e7125ba22bf48671</a></p>
 <p></p>
 <p>coppeliasim場景建立</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Gg81oSunGyY" title="YouTube video player" width="560"></iframe></p>
-<p>lua轉動示範</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/-8ewv4jOYz0" title="YouTube video player" width="560"></iframe></p>
-<p>leo控制</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/yJLP9NYuRUA" title="YouTube video player" width="560"></iframe></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Gg81oSunGyY" title="YouTube video player" width="560"></iframe>LUA鍵盤轉動示範</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/-8ewv4jOYz0" title="YouTube video player" width="560"></iframe>Leo鍵盤控制</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/yJLP9NYuRUA" title="YouTube video player" width="560"></iframe>逆向運動學函式</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/oY1lToDP7sE" title="YouTube video player" width="560"></iframe></p>
+<p></p>
+<p></p>
